--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   <div id="container">
     <div id="header">
       <h1><a href="/">Delono</a></h1>
+			<h3 class="title">Where Microbusiness meets Fair Trade</h3>
       <div id="user-navigation">
         <ul class="wat-cf">
           <li><a href="#"><%= t("web-app-theme.profile", :default => "Profile") %></a></li>
