--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,14 @@
         </ul>
       </div>      
       <div id="main-navigation">
-        <ul class="wat-cf"></ul>
+        <ul class="wat-cf">
+	 				<li class="<%= controller.controller_path == 'products' ? 'active' : '' %>">
+						<a href="<%= products_path %>">Products</a>
+					</li>
+	 				<li class="<%= controller.controller_path == 'consigners' ? 'active' : '' %>">
+						<a href="<%= consigners_path %>">Consigners</a>
+					</li>
+				</ul>
       </div>
     </div>    
     <div id="wrapper" class="wat-cf">
