--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,30 +1,48 @@
-<h1>Listing products</h1>
+<div class="block">
+  <div class="secondary-navigation">
+    <ul class="wat-cf">
+	    <li class="first active"><%= link_to "#{t("web-app-theme.list", :default => "List")}", products_path  %></li>
+  		<li><%= link_to "#{t("web-app-theme.new", :default => "New")}", new_product_path %></li>
+    </ul>
+  </div>          
+  <div class="content">          
+    <h2 class="title"><%= t("web-app-theme.all", :default => "All")  %> Products</h2>
+    <div class="inner">
+      <table class="table">
+        <tr>             
+          <th class="first">Code</th>
+					<th>Name (click to sell)</th>
+					<th>In Stock</th>
+					<th>Wholesale</th>
+					<th>Retail</th>
+					<th>Sell!</th>
+					<th>Receive</th>
+          <th class="last">&nbsp;</th>
+        </tr>
+        <% @products.each do |product| -%>
+        <tr class="<%= cycle("odd", "even") %>">
+					<td><%= link_to product.code, product_path(product) %></td>
+          <td><%= link_to product.name, product_path(product) + "/sell" %></td>
+					<td><%= product.count > 0 ? product.count : "No Stock" %></td>
+					<td><%= product.wholesale %></td>
+					<td><%= product.retail %></td>
+					<td><%= link_to "Sell!", product_path(product) + "/sell" if product.count > 0 %></td>
+					<td><%= link_to "Receive", product_path(product) + "/receive" %></td>
+          <td class="last">
+						<%= link_to "Restock", product_path(product) + "/restock" %> |
+						<%= link_to "Return", product_path(product) + "/return" %> |
+						<%= link_to "Lose", product_path(product) + "/Lose" %> |
+          </td>
+        </tr>          
+        <% end -%>
+      </table>
+      <div class="actions-bar wat-cf">
+        <div class="actions">
+        </div>
+        
+      </div>
+    </div>
+  </div>
+</div>
 
-<table>
-  <tr>
-    <th>Code</th>
-    <th>Name</th>
-    <th>Description</th>
-    <th>Consigner</th>
-    <th>Wholesale</th>
-    <th>Retail</th>
-  </tr>
-
-<% @products.each do |product| %>
-  <tr>
-    <td><%=h product.code %></td>
-    <td><%=h product.name %></td>
-    <td><%=h product.description %></td>
-    <td><%=h product.consigner_id %></td>
-    <td><%=h product.wholesale %></td>
-    <td><%=h product.retail %></td>
-    <td><%= link_to 'Show', product %></td>
-    <td><%= link_to 'Edit', edit_product_path(product) %></td>
-    <td><%= link_to 'Destroy', product, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New product', new_product_path %>
+<% content_for :sidebar, render(:partial => 'sidebar') -%>
