--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,33 +1,54 @@
-<p>
-  <b>Code:</b>
-  <%=h @product.code %>
-</p>
+<div class="block">
+  <div class="secondary-navigation">
+    <ul class="wat-cf">
+      <li class="first"><%= link_to "#{t("web-app-theme.list", :default => "List")}", products_path  %></li>
+      <li><%= link_to "#{t("web-app-theme.new", :default => "New")}", new_product_path %></li>
+      <li class="active"><%= link_to "#{t("web-app-theme.show", :default => "Show")}", product_path %></li>
+    </ul>
+  </div>          
+  <div class="content">
+    <div class="inner">
+      
+        <p>
+          <b><%= t("activerecord.attributes.product.code", :default => t("activerecord.labels.code", :default => "Code")) %>:</b>
+          <%= @product.code %>
+        </p>
 
-<p>
-  <b>Name:</b>
-  <%=h @product.name %>
-</p>
+        <p>
+          <b><%= t("activerecord.attributes.product.name", :default => t("activerecord.labels.name", :default => "Name")) %>:</b>
+          <%= @product.name %>
+        </p>
 
-<p>
-  <b>Description:</b>
-  <%=h @product.description %>
-</p>
+        <p>
+          <b><%= t("activerecord.attributes.product.description", :default => t("activerecord.labels.description", :default => "Description")) %>:</b>
+          <%= @product.description %>
+        </p>
 
-<p>
-  <b>Consigner:</b>
-  <%=h @product.consigner_id %>
-</p>
+        <p>
+          <b><%= t("activerecord.attributes.product.wholesale", :default => t("activerecord.labels.wholesale", :default => "Wholesale")) %>:</b>
+          <%= @product.wholesale %>
+        </p>
 
-<p>
-  <b>Wholesale:</b>
-  <%=h @product.wholesale %>
-</p>
+        <p>
+          <b><%= t("activerecord.attributes.product.retail", :default => t("activerecord.labels.retail", :default => "Retail")) %>:</b>
+          <%= @product.retail %>
+        </p>
 
-<p>
-  <b>Retail:</b>
-  <%=h @product.retail %>
-</p>
+        <p>
+          <b><%= t("activerecord.attributes.product.consigner_id", :default => t("activerecord.labels.consigner_id", :default => "Consigner")) %>:</b>
+          <%= @product.consigner_id %>
+        </p>
 
+        <p>
+          <b><%= t("activerecord.attributes.product.business_id", :default => t("activerecord.labels.business_id", :default => "Business")) %>:</b>
+          <%= @product.business_id %>
+        </p>
+      <div class="wat-cf">
+        <%= link_to "#{image_tag("web-app-theme/application_edit.png", :alt => "#{t("web-app-theme.edit", :default=> "Edit")}")} #{t("web-app-theme.edit", :default=> "Edit")}", edit_product_path(@product), :class => "button" %> 
+        <%= link_to "#{image_tag("web-app-theme/cross.png", :alt => "#{t("web-app-theme.delete", :default=> "Delete")}")} #{t("web-app-theme.delete", :default => "Delete")}", product_path(@product), :method => "delete", :class => "button", :confirm => "#{t("web-app-theme.confirm", :default => "Are you sure?")}" %>
+      </div>      
+    </div>
+  </div>
+</div>
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+<% content_for :sidebar, render(:partial => 'sidebar') -%>
