Add invoice model and begin building invoicing subsystem

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,9 @@
 	 				<li class="<%= controller.controller_path == 'consigners' ? 'active' : '' %>">
 						<a href="<%= consigners_path %>">Consigners</a>
 					</li>
+				 	<li class="<%= controller.controller_path == 'invoices' ? 'active' : '' %>">
+						<a href="<%= invoices_path %>">Invoices</a>
+					</li>
 				</ul>
       </div>
     </div>    
