--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -38,12 +38,12 @@
 	        <% @business.consigners.each do |consigner| -%>
 	        <tr class="<%= cycle("odd", "even") %>">
 	          <td><%= consigner.id %></td>
-						<td><%= link_to consigner.name, consigner_path(consigner) %></td>
+						<td><%= link_to consigner.name, business_consigner_path(@business, consigner) %></td>
 						<td><%= consigner.biz_name %></td>
 	          <td class="last">
-	            <%= link_to "#{t("web-app-theme.show", :default => "Show")}", consigner_path(consigner) %> |
-	            <%= link_to "#{t("web-app-theme.edit", :default => "Edit")}", edit_consigner_path(consigner) %> |
-	            <%= link_to "#{t("web-app-theme.delete", :default => "Delete")}", consigner_path(consigner), :method => :delete, :confirm => "#{t("web-app-theme.confirm", :default => "Are you sure?")}" %>
+	            <%= link_to "#{t("web-app-theme.show", :default => "Show")}", business_consigner_path(@business, consigner) %> |
+	            <%= link_to "#{t("web-app-theme.edit", :default => "Edit")}", edit_business_consigner_path(@business, consigner) %> |
+	            <%= link_to "#{t("web-app-theme.delete", :default => "Delete")}", business_consigner_path(@business, consigner), :method => :delete, :confirm => "#{t("web-app-theme.confirm", :default => "Are you sure?")}" %>
 	          </td>
 	        </tr>          
 	        <% end -%>
