--- a/app/views/consigners/index.html.erb
+++ b/app/views/consigners/index.html.erb
@@ -1,8 +1,8 @@
 <div class="block">
   <div class="secondary-navigation">
     <ul class="wat-cf">
-	    <li class="first active"><%= link_to "#{t("web-app-theme.list", :default => "List")}", consigners_path  %></li>
-  		<li><%= link_to "#{t("web-app-theme.new", :default => "New")}", new_consigner_path %></li>
+	    <li class="first active"><%= link_to "List", business_consigners_path(@business)  %></li>
+  		<li><%= link_to "New", new_business_consigner_path(@business) %></li>
     </ul>
   </div>          
   <div class="content">          
@@ -18,12 +18,12 @@
         <% @consigners.each do |consigner| -%>
         <tr class="<%= cycle("odd", "even") %>">
           <td><%= consigner.id %></td>
-					<td><%= link_to consigner.name, consigner_path(consigner) %></td>
+					<td><%= link_to consigner.name, business_consigner_path(@business, consigner) %></td>
 					<td><%= consigner.biz_name %></td>
           <td class="last">
-            <%= link_to "#{t("web-app-theme.show", :default => "Show")}", consigner_path(consigner) %> |
-            <%= link_to "#{t("web-app-theme.edit", :default => "Edit")}", edit_consigner_path(consigner) %> |
-            <%= link_to "#{t("web-app-theme.delete", :default => "Delete")}", consigner_path(consigner), :method => :delete, :confirm => "#{t("web-app-theme.confirm", :default => "Are you sure?")}" %>
+            <%= link_to "Show", business_consigner_path(@business, consigner) %> |
+            <%= link_to "Edit", edit_business_consigner_path(@business, consigner) %> |
+            <%= link_to "Delete", business_consigner_path(@business, consigner), :method => :delete, :confirm => "#{t("web-app-theme.confirm", :default => "Are you sure?")}" %>
           </td>
         </tr>          
         <% end -%>
