--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,10 +3,9 @@
     <div class="inner">
       
 			<h2><%= @user.first_name %> <%= @user.last_name %></h2>
-			
 			<p>
 				<strong>Username: </strong><%= @user.username %><br />
-				<strong>Email address: </strong><%= @user.email %>
+				<strong>Email Address: </strong><%= @user.email %>
 			</p>
 			
 			<h3>User Businesses:</h3>
