--- a/app/views/products/_sidebar.html.erb
+++ b/app/views/products/_sidebar.html.erb
@@ -1,7 +1,16 @@
 <div class="block">
-  <h3>Simple Block</h3>
+  <h3>Quick Add Product</h3>
   <div class="content">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    <% semantic_form_for [@business, Product.new], :url => {:action => 'create'}	do |f| %>
+			<% f.inputs do %>
+				<%= f.input :consigner %>
+				<%= f.input :code, :input_html => { :size => 10 } %>
+				<%= f.input :name %>
+				<%= f.input :wholesale %>
+				<%= f.input :retail %>
+			<% end %>
+			<%= f.commit_button %>
+		<% end %>
   </div>
 </div>
 <div class="block">
