--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,25 +12,34 @@
         <tr>             
           <th class="first">Code</th>
 					<th>Name</th>
+					<th>Consigner</th>
 					<th>Wholesale</th>
 					<th>Retail</th>
 					<th>In Stock</th>
 					<th>Sales</th>
 					<th>Income</th>
 					<th>Cost</th>
+					<th>Sell!</th>
           <th class="last">&nbsp;</th>
         </tr>
         <% @products.each do |product| -%>
         <tr class="<%= cycle("odd", "even") %>">
 					<td><%= link_to product.code, [@business, product] %></td>
           <td><%= link_to product.name, business_product_path(@business, product) %></td>
+          <td><%= link_to product.consigner.biz_name ? product.consigner.biz_name : product.consigner.name, business_consigner_path(@business, product.consigner) %></td>
 					<td><%= number_to_currency product.wholesale %></td>
 					<td><%= number_to_currency product.retail %></td>
 					<td><%= product.count > 0 ? product.count : "No Stock" %></td>
-					<td><%= product.sales %></td>
+					<td><%= product.sales_this_period %></td>
 					<td><%= number_to_currency product.income_this_period %></td>
 					<td><%= number_to_currency product.cost_this_period %></td>
-					<td class = "last"><%= link_to "Sell!", business_product_path(@business, product) + "/sell" if product.count > 0 %></td>
+					<td><%= link_to "Sell!", business_product_path(@business, product) + "/sell" if product.count > 0 %></td>
+					<td class ="last">
+						<%= link_to "Receive", business_product_path(@business, product) + "/receive" %> |
+						<%= link_to "Restock", business_product_path(@business, product) + "/restock" %><br />
+						<%= link_to "Return", business_product_path(@business, product) + "/return" %> |
+						<%= link_to "Lose", business_product_path(@business, product) + "/lose" %>
+						
         </tr>          
         <% end -%>
       </table>
