--- a/app/views/consigners/show.html.erb
+++ b/app/views/consigners/show.html.erb
@@ -75,6 +75,7 @@
       <div class="wat-cf">
         <%= link_to "#{image_tag("web-app-theme/application_edit.png", :alt => "#{t("web-app-theme.edit", :default=> "Edit")}")} #{t("web-app-theme.edit", :default=> "Edit")}", edit_business_consigner_path(@business, @consigner), :class => "button" %> 
         <%= link_to "#{image_tag("web-app-theme/cross.png", :alt => "#{t("web-app-theme.delete", :default=> "Delete")}")} #{t("web-app-theme.delete", :default => "Delete")}", business_consigner_path(@business, @consigner), :method => "delete", :class => "button", :confirm => "#{t("web-app-theme.confirm", :default => "Are you sure?")}" %>
+        <%= link_to "#{image_tag("web-app-theme/tick.png", :alt => "#{t("web-app-theme.invoice", :default=> "Invoice")}")} #{t("web-app-theme.invoice", :default => "Invoice")}", business_consigner_path(@business, @consigner) + "/invoice", :class => "button", :confirm => "#{t("web-app-theme.confirm", :default => "Invoice #{@consigner.name}?")}" %>
       </div>      
     </div>
   </div>
