--- a/app/views/products/_sidebar.html.erb
+++ b/app/views/products/_sidebar.html.erb
@@ -1,3 +1,4 @@
+<%= render :partial => 'shared/top_bar' %>
 <div class="block">
   <h3>Quick Add Product</h3>
   <div class="content">
@@ -13,10 +14,4 @@
 		<% end %>
   </div>
 </div>
-<div class="block">
-  <h3>Links</h3>
-  <ul class="navigation">
-    <li><a href="#">Link 1</a></li>
-    <li><a href="#">Link 2</a></li>
-  </ul>
-</div>
+<%= render :partial => 'shared/bottom_bar' %>
