--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -1,19 +1,11 @@
-
-  <div class="group">
-    <%= f.label :business_id, t("activerecord.attributes.invoice.business_id", :default => "Business"), :class => :label %>
-    <%= f.text_field :business_id, :class => 'text_field' %>
-    <span class="description">Ex: a simple text</span>
-  </div>
-
-  <div class="group">
-    <%= f.label :consigner_id, t("activerecord.attributes.invoice.consigner_id", :default => "Consigner"), :class => :label %>
-    <%= f.text_field :consigner_id, :class => 'text_field' %>
-    <span class="description">Ex: a simple text</span>
-  </div>
-        
+<% semantic_form_for [@business, @invoice] do |f| %>
+ 	<% f.inputs do %>
+		<%= f.input :consigner %>
+	<% end %>
+<% end %>
 <div class="group navform wat-cf">
   <button class="button" type="submit">
     <%= image_tag("web-app-theme/tick.png", :alt => "#{t("web-app-theme.save", :default => "Save")}") %> <%= t("web-app-theme.save", :default => "Save") %>
   </button>  
-  <%= link_to "#{image_tag("web-app-theme/cross.png", :alt => "#{t("web-app-theme.cancel", :default => "Cancel")}")} #{t("web-app-theme.cancel", :default => "Cancel")}", invoices_path, :class => "button" %> 
+  <%= link_to "#{image_tag("web-app-theme/cross.png", :alt => "#{t("web-app-theme.cancel", :default => "Cancel")}")} #{t("web-app-theme.cancel", :default => "Cancel")}", invoices_path(@business), :class => "button" %> 
 </div>
