--- a/app/views/products/_sidebar.html.erb
+++ b/app/views/products/_sidebar.html.erb
@@ -2,7 +2,7 @@
 <div class="block">
   <h3>Quick Add Product</h3>
   <div class="content">
-    <% semantic_form_for [@business, Product.new], :url => {:action => 'create'}	do |f| %>
+    <% semantic_form_for Product.new, :url => {:action => 'create'}	do |f| %>
 			<% f.inputs do %>
 				<%= f.input :consigner %>
 				<%= f.input :code, :input_html => { :size => 10 } %>
