--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,6 +2,7 @@
 
 <% semantic_form_for @user do |f| %>
   <% f.inputs do %>
+		<%= f.input :invitation_token, :as => :hidden %>
 		<%= f.input :first_name %>
 		<%= f.input :last_name %>
 		<%= f.input :email %>
