Fix cap after_deploy and remove image

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
         <%= yield %>
         <div id="footer">
           <div class="block">
-            <p>Copyright &copy; <%= Time.now.year %> John Metta.</p>
+            <p>Copyright &copy; <%= Time.now.year %> <a href="http://mettadore.com">John Metta</a>.</p>
           </div>      
         </div>
       </div>
